# Multimodal-Zero-Touch-Site-Assessor

./: .env.example  .gitignore  CLAUDE.md  ISSUES.md  Makefile  README.md  pyproject.toml
front-end/: bun.lockb  package-lock.json  package.json
sld_output/: 0179bdf5-7ffe-402b-bcab-b7714ce4ad9e.sld.txt  074514fe-ab86-4db8-83d4-f93e80c77193.sld.txt  080c3051-1efd-442d-91e9-64380b75104c.sld.txt  0821dd2d-81c1-400a-b42b-4ad808b2f491.sld.txt  0998144b-05b5-4e33-9f9f-bd44c55c9f78.sld.txt  0b045810-2489-44b7-866d-601a49a0873f.sld.txt  0b0f4496-a0f4-40f1-8ecd-6bb43a745bfc.sld.txt  0d4060ab-4a1d-466f-aac5-7fc707dee266.sld.txt  0e7cdd7e-75a0-4b63-ac0b-09ed4331fcb6.sld.txt  0f655773-e2a9-4c7e-8181-1a166b48b530.sld.txt  1066ea5b-eb9b-4e66-96d7-65e18736774f.sld.txt  10cfd929-3b1c-4528-84f3-0428e3ef7158.sld.txt  11e02467-def8-43cf-bba3-8fd8ad7a6286.sld.txt  13d8a775-b1f4-46a3-99a2-6ee118c78f3b.sld.txt  15218657-d94f-4ec8-88a2-83db2db84ed4.sld.txt  16c70f35-cba0-48ad-8947-ef8237fd7286.sld.txt  170910b0-5673-4603-9873-afc4884b2d85.sld.txt  17cd7685-1c83-4a48-9fa4-3959c19996b3.sld.txt  187ec8f5-a049-4a38-8c9d-8b277300ed7e.sld.txt  1908ccd8-32ec-4ea9-b1e4-73f9f77af7f8.sld.txt  1992a880-06ef-42de-bc97-8b9917696c73.sld.txt  1ac258a9-bcbc-4c76-9531-e89f8e084c95.sld.txt  1b1b6e11-4473-4f32-a698-4ff8698548f5.sld.txt  21cfa6de-138f-4083-a391-400ebe5fd301.sld.txt  22adeaa6-070b-4438-abc0-694b8d19d047.sld.txt  2580f844-6fbd-4457-aa7d-04c3ab3e9a0e.sld.txt  27b27fe8-6d7b-48dd-b86e-c57c9eeaff27.sld.txt  28aecbaf-fd3d-4525-9633-7129c3a79a7b.sld.txt  2a8ac65c-ef4b-4248-98ae-fc477bd4b6fe.sld.txt  (+199 more)
(+182 files in other folders)
